--- a/src/ccollections/stack/BUILD.bazel
+++ b/src/ccollections/stack/BUILD.bazel
@@ -2,5 +2,5 @@ cc_library(
     name = "stack",
     srcs = ["stack.c"],
     hdrs = ["stack.h"],
-    visibility = ["//tests/ccollections/stack:__pkg__"],
+    visibility = ["//visibility:public"],
 )
