Forgot to add :interfaces as a dependency to :stack and fixed bug in stack creation.

--- a/src/ccollections/stack/BUILD.bazel
+++ b/src/ccollections/stack/BUILD.bazel
@@ -3,4 +3,5 @@ cc_library(
     srcs = ["stack.c"],
     hdrs = ["stack.h"],
     visibility = ["//visibility:public"],
+    deps = ["//src/ccollections/interfaces:interfaces"],
 )
