Renamed array to vector so it matches common terminology, especially given that arrays are generally understood to have a fixed size unless otherwise specified.

--- a/src/ccollections/vector/BUILD.bazel
+++ b/src/ccollections/vector/BUILD.bazel
@@ -1,7 +1,7 @@
 cc_library(
-    name = "array",
-    srcs = ["array.c"],
-    hdrs = ["array.h"],
+    name = "vector",
+    srcs = ["vector.c"],
+    hdrs = ["vector.h"],
     visibility = ["//visibility:public"],
     deps = ["//src/ccollections/interfaces:interfaces"],
 )
