--- a/src/ccollections/map/BUILD.bazel
+++ b/src/ccollections/map/BUILD.bazel
@@ -3,5 +3,5 @@ cc_library(
     srcs = ["hashmap.c", "siphash.c"],
     hdrs = ["hashmap.h", "siphash.h"],
     visibility = ["//visibility:public"],
-    deps = ["//src/ccollections/interfaces:interfaces"],
+    deps = ["//src/ccollections/common:common"],
 )
