First in refactoring: replaced custom error handling with assert so those checks can be removed in production with NDEBUG. Ammended tests accordingly.

--- a/src/ccollections/common/BUILD.bazel
+++ b/src/ccollections/common/BUILD.bazel
@@ -1,5 +1,5 @@
 cc_library(
     name = "common",
-    hdrs = ["interfaces.h", "macros.h"],
+    hdrs = ["common.h"],
     visibility = ["//visibility:public"],
 )
