--- a/tests/ccollections/map/BUILD.bazel
+++ b/tests/ccollections/map/BUILD.bazel
@@ -1,7 +1,7 @@
 cc_test(
   name = "map_test",
   size = "small",
-  srcs = ["hashmap_test.cc"],
+  srcs = ["map_test.cc"],
   deps = [
     "@com_google_googletest//:gtest_main",
     "//src/ccollections/map:map",
