--- a/tests/ccollections/set/BUILD.bazel
+++ b/tests/ccollections/set/BUILD.bazel
@@ -1,7 +1,7 @@
 cc_test(
   name = "set_test",
   size = "small",
-  srcs = ["hashset_test.cc"],
+  srcs = ["set_test.cc"],
   deps = [
     "@com_google_googletest//:gtest_main",
     "//src/ccollections/set:set",
