Reorganized such that we have header files in a separate include folder. This makes it easy to ship header files separately from any particular implementation or usage thereof.

--- a/src/ccollections/deque/BUILD.bazel
+++ b/src/ccollections/deque/BUILD.bazel
@@ -1,7 +1,7 @@
 cc_library(
     name = "deque",
     srcs = ["deque.c"],
-    hdrs = ["deque.h"],
+    copts = ["-Iinclude"],
+    deps = ["//include:include"],
     visibility = ["//visibility:public"],
-    deps = ["//src/ccollections/common:common"],
 )
