--- a/include/BUILD.bazel
+++ b/include/BUILD.bazel
@@ -1,5 +1,5 @@
 cc_library(
-    name = "common",
-    hdrs = ["common.h"],
+    name = "include",
+    hdrs = glob(["*.h"]),
     visibility = ["//visibility:public"],
 )
