--- a/src/ccollections/list/BUILD.bazel
+++ b/src/ccollections/list/BUILD.bazel
@@ -1,7 +1,7 @@
 cc_library(
     name = "list",
     srcs = ["list.c"],
-    hdrs = ["list.h"],
+    copts = ["-Iinclude"],
+    deps = ["//include:include"],
     visibility = ["//visibility:public"],
-    deps = ["//src/ccollections/common:common"],
 )
