--- a/src/ccollections/vector/BUILD.bazel
+++ b/src/ccollections/vector/BUILD.bazel
@@ -1,7 +1,7 @@
 cc_library(
     name = "vector",
     srcs = ["vector.c"],
-    hdrs = ["vector.h"],
+    copts = ["-Iinclude"],
+    deps = ["//include:include"],
     visibility = ["//visibility:public"],
-    deps = ["//src/ccollections/common:common"],
 )
