--- a/tests/ccollections/vector/BUILD.bazel
+++ b/tests/ccollections/vector/BUILD.bazel
@@ -5,5 +5,7 @@ cc_test(
   deps = [
     "@com_google_googletest//:gtest_main",
     "//src/ccollections/vector:vector",
+    "//include:include",
   ],
+  copts = ["-Iinclude"],
 )
