--- a/tests/collections/set/BUILD.bazel
+++ b/tests/collections/set/BUILD.bazel
@@ -1,10 +1,10 @@
 cc_test(
-  name = "map_test",
+  name = "set_test",
   size = "small",
-  srcs = ["map_test.cc"],
+  srcs = ["set_test.cc"],
   deps = [
     "@com_google_googletest//:gtest_main",
-    "//src/ccollections/map:map",
+    "//src/collections/set:set",
     "//include:include",
   ],
   copts = ["-Iinclude"],
