--- a/tests/collections/deque/BUILD.bazel
+++ b/tests/collections/deque/BUILD.bazel
@@ -1,10 +1,10 @@
 cc_test(
-  name = "list_test",
+  name = "deque_test",
   size = "small",
-  srcs = ["list_test.cc"],
+  srcs = ["deque_test.cc"],
   deps = [
     "@com_google_googletest//:gtest_main",
-    "//src/ccollections/list:list",
+    "//src/collections/deque:deque",
     "//include:include",
   ],
   copts = ["-Iinclude"],
